# sentinel

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
backend/: pyproject.toml
backend/sentinel/: audit.py  config.py  ingestion.py  main.py  pipeline.py  projection.py  source_urls.py  store.py  ws.py
backend/sentinel/alerts/: dispatch.py  engine.py  models.py
backend/sentinel/analysis/: deduplicator.py  executive_ops.py  llm_analyzer.py  normalizer.py  playbooks.py  rule_engine.py  swiss_relevance.py
backend/sentinel/api/: alerts.py  analytics.py  annotations.py  deps.py  events.py  exports.py  ihr.py  operations.py  situations.py  watchlists.py
backend/sentinel/collectors/: bag_bulletin.py  base.py  beacon.py  cidrap.py  ecdc.py  nnsid.py  promed.py  rasff.py  sentinella.py  wastewater.py  who_don.py  who_eios.py  woah.py
backend/sentinel/db/: engine.py  repository.py  seed.py  tables.py
backend/sentinel/ihr/: models.py  workflow.py
backend/sentinel/models/: __init__.py  annotation.py  event.py  organization.py  situation.py
backend/sentinel/reports/: csv_export.py  daily_brief.py
backend/tests/: conftest.py  test_ingestion.py  test_models.py  test_pipeline.py  test_store.py  test_ws.py
backend/tests/fixtures/: ecdc_feed.xml  promed_feed.xml  who_don_feed.xml  who_eios_response.json  woah_response.json
backend/tests/test_alerts/: test_engine.py
backend/tests/test_analysis/: test_deduplicator.py  test_executive_ops.py  test_llm_analyzer.py  test_normalizer.py  test_playbooks.py  test_rule_engine.py
data/: manifest.json  (+1 more)
(+671 files in other folders)
